# maxima

./: .travis.yml  README  README.developers-howto  README.lisps  configure.ac  maxima-local.in
.github/workflows/: deploy-docs.yml  github-actions-ci.yml  github-actions-demo.yml  sync.yml
_site/: index.html
crosscompile-windows/: CMakeLists.txt  Makefile.am  README.txt  TODO.txt  nightlybuild.sh  nightlytest.sh
crosscompile-windows/wxmaxima/: CMakeLists.txt
crosscompile-windows/wxwidgets/: CMakeLists.txt
doc/info/: DataTypes.texi  Differentiation.texi  Expressions.texi  Introduction.texi  Lists.texi  Makefile.am  Runtime.texi  common-lang.mk  descriptive.texi  include-maxima.texi.in  texi2html.init.in
share/contrib/boolsimp/: boolsimp.lisp
share/contrib/diffequations/tests/: rtestode_kamke_1_1.mac  rtestode_kamke_1_2.mac  rtestode_kamke_2_1.mac  rtestode_kamke_2_2.mac  rtestode_kamke_2_3.mac  rtestode_kamke_2_4.mac  rtestode_kamke_2_5.mac  rtestode_odelin.mac
share/contrib/sarag/: readme.txt  signDetermination.mac  whatsnew.txt
share/descriptive/: descriptive.mac
share/distrib/: distrib.mac
share/draw/: gnuplot.lisp  vtk.lisp
share/solve_rec/: rtest_simplify_sum.mac
share/stringproc/: stringproc.lisp
src/: Makefile.am  algsys.lisp  asum.lisp  command-line.lisp  defmfun-check.lisp  ellipt.lisp  gamma.lisp  init-cl.lisp  limit.lisp  lmdcls.lisp  macsys.lisp  maxima.bat.in  maxima.system  maxmin.lisp  mload.lisp  nrat4.lisp  nset.lisp  nummod.lisp  numth.lisp  plot.lisp  rat3a.lisp  risch.lisp  rpart.lisp  simp.lisp
tests/: rtest1.mac  rtest11.mac  rtest8.mac  rtest_algsys.mac  rtest_limit.mac  test.sh.in  testsuite.lisp
